--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,14 @@ __pycache__/
 
 # C extensions
 *.so
+#files
+cafe_intel.sql
+final-projeck.pdf
+Schema_Database_Cafe.pdf
 
 # Distribution / packaging
+cafe_intel.sql
+final-projeck.pdf
 .Python
 build/
 develop-eggs/
