lambda layer created

--- a/aws_template/team4-cf-template.yaml
+++ b/aws_template/team4-cf-template.yaml
@@ -2,17 +2,6 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: >
   Template to deploy a lambda which is triggered by an S3 event.
 
-Parameters:
-  DeploymentBucket:
-    Type: String
-    Description: Enter the name of the S3 bucket where your deployment package is.
-  DeploymentPackageKey:
-    Type: String
-    Description: Enter the name of the S3 key of your deployment package.
-  BucketName:
-    Type: String
-    Description: Enter the name of S3 bucket you wish to create.
-
 Resources:
   LambdaFunctionRole:
     Type: AWS::IAM::Role
@@ -28,8 +17,6 @@ Resources:
             - sts:AssumeRole
       Path: "/"
       PermissionsBoundary: !Sub arn:aws:iam::${AWS::AccountId}:policy/ScopePermissions
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/AmazonS3FullAccess
       Policies:
       - PolicyName: LambdaLogsPolicy
         PolicyDocument:
@@ -40,23 +27,50 @@ Resources:
               - logs:CreateLogGroup
               - logs:CreateLogStream
               - logs:PutLogEvents
-              - s3:*
             Resource: '*'
+      - PolicyName: LambdaS3Policy
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+              - 's3:*'
+            Resource:
+              - "arn:aws:s3:::team4-data-bucket/*"
+              - "arn:aws:s3:::team4-data-bucket"
 
   LambdaFunction:
     Type: AWS::Lambda::Function
     Properties:
       Runtime: python3.8
-      Handler: lambda_function.handler
+      Handler: index.handler
       Role: !GetAtt LambdaFunctionRole.Arn
       Code:
-        S3Bucket: !Ref DeploymentBucket
-        S3Key: !Ref DeploymentPackageKey
+        ZipFile: |
+          import os
+          import logging
+          import boto3
+
+          LOGGER = logging.getLogger()
+          LOGGER.setLevel(logging.INFO)
+          def handler(event, context):
+            LOGGER.info(f'Event structure: {event}')
+            
+            bucket = event['Records'][0]['s3']['bucket']['name']
+            key = event['Records'][0]['s3']['object']['key']
+            filename = os.path.basename(key)
+
+            client = boto3.client('s3')
+            s3 = boto3.resource('s3')
+            s3.meta.client.download_file(bucket, key, f'/tmp/{filename}')
+            print("Complete function")
+
+            print(os.listdir('/tmp'))
 
   S3Bucket:
-    Type: 'AWS::S3::Bucket'
+    Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Ref BucketName
+      BucketName: team4-data-bucket
       NotificationConfiguration:
         LambdaConfigurations:
           - Event: s3:ObjectCreated:*
