add yml for cicd test

--- a/aws_template/team4-cf-template.yml
+++ b/aws_template/team4-cf-template.yml
@@ -6,6 +6,10 @@ Resources:
   LambdaFunctionRole:
     Type: AWS::IAM::Role
     Properties:
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonRedshiftFullAccess
+        - arn:aws:iam::aws:policy/AmazonSSMReadOnlyAccess
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
