--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-boto3==1.20.48
-botocore==1.23.48
-jmespath==0.10.0
-numpy==1.22.1
+# boto3==1.20.48
+# botocore==1.23.48
+# jmespath==0.10.0
+# numpy==1.22.1
 pandas==1.4.0
-psycopg2-binary==2.9.3
-python-dateutil==2.8.2
-pytz==2021.3
-s3transfer==0.5.1
-six==1.16.0
-SQLAlchemy==1.4.31
-urllib3==1.26.8
+# psycopg2-binary==2.9.3
+# python-dateutil==2.8.2
+# pytz==2021.3
+# s3transfer==0.5.1
+# six==1.16.0
+# SQLAlchemy==1.4.31
+# urllib3==1.26.8
