--- a/aws_template/team4-cf-template_sprint_3_completed.yml
+++ b/aws_template/team4-cf-template_sprint_3_completed.yml
@@ -75,7 +75,7 @@ Resources:
   S3Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: team4-data-bucket
+      BucketName: team4-data-bucket-backup
       # NotificationConfiguration:
       #   LambdaConfigurations:
       #     - Event: s3:ObjectCreated:*
