--- a/.github/workflows/create-new-cf-stack.yml
+++ b/.github/workflows/create-new-cf-stack.yml
@@ -6,10 +6,10 @@ on:
 jobs:
   build-lambda-layer:
     runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+    # env:
+    #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    #   AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
 
     steps:
       - name: checkout-repo
@@ -19,6 +19,8 @@ jobs:
 
       - name: create new cloudformation stack
         run: |
+          aws sso login --profile=victor-profile
+          export AWS_PROFILE=victor-profile
           aws s3 cp aws_template/team4-cf-template_sprint_3_completed.yml s3://team4-bucket-cf-template/templates/team4-cf-template_sprint_3_completed.yml
           aws cloudformation create-stack --stack-name team-4-stack-sprint-4 --template-url https://team4-bucket-cf-template.s3.eu-west-1.amazonaws.com/templates/team4-cf-template_sprint_3_completed.yml --region eu-west-1 --capabilities CAPABILITY_IAM
 
