--- a/.github/workflows/create-team-4-cf.yml
+++ b/.github/workflows/create-team-4-cf.yml
@@ -4,7 +4,7 @@ on:
   push
 
 jobs:
-  build-lambda-layer:
+  create-team-4-cf-stack:
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -36,4 +36,4 @@ jobs:
 
       - name: create new stack from team_4_cafe_intel.yml
         run: |
-          aws cloudformation create-stack --stack-name team-4-cafe-intel --template-url https://team4-bucket-cf-template.s3.eu-west-1.amazonaws.com/templates/team_4_cafe_intel.yml --region eu-west-1 --capabilities CAPABILITY_IAM
+          aws cloudformation create-stack --stack-name team-4-cafe-intel --template-url https://team4-bucket-cf-template.s3.eu-west-1.amazonaws.com/team_4_cafe_intel.yml --region eu-west-1 --capabilities CAPABILITY_IAM
