--- a/.github/workflows/create-team-4-cf.yml
+++ b/.github/workflows/create-team-4-cf.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: upload cloudformation team_4_cafe_intel.yml file
         run: |
-          aws s3 cp aws_template/team_4_cafe_intel.yml s3://team4-bucket-cf-template/team_4_cafe_intel.yml
+          aws s3 cp aws_template/team-4-cafe-intel.yml s3://team4-bucket-cf-template/team-4-cafe-intel.yml
 
-      - name: create new stack from team_4_cafe_intel.yml
+      - name: create new stack from team-4-cafe-intel.yml
         run: |
-          aws cloudformation create-stack --stack-name team-4-cafe-intel --template-url https://team4-bucket-cf-template.s3.eu-west-1.amazonaws.com/team_4_cafe_intel.yml --region eu-west-1 --capabilities CAPABILITY_IAM
+          aws cloudformation create-stack --stack-name team-4-cafe-intel --template-url https://team4-bucket-cf-template.s3.eu-west-1.amazonaws.com/team-4-cafe-intel.yml --region eu-west-1 --capabilities CAPABILITY_IAM
