--- a/.github/workflows/create-team-4-cf.yml
+++ b/.github/workflows/create-team-4-cf.yml
@@ -30,10 +30,7 @@ jobs:
         run: |
           aws s3 cp team-4-extract-transform-production.zip s3://team4-bucket-cf-template/team-4-extract-transform-production.zip
 
-      - name: upload cloudformation team_4_cafe_intel.yml file
+      - name: upload & create cloudformation team_4_cafe_intel.yml file
         run: |
           aws s3 cp aws_template/team-4-cafe-intel.yml s3://team4-bucket-cf-template/team-4-cafe-intel.yml
-
-      - name: create new stack from team-4-cafe-intel.yml
-        run: |
           aws cloudformation create-stack --stack-name team-4-cafe-intel --template-url https://team4-bucket-cf-template.s3.eu-west-1.amazonaws.com/team-4-cafe-intel.yml --region eu-west-1 --capabilities CAPABILITY_IAM
