--- a/.github/workflows/create-team-4-cf.yml
+++ b/.github/workflows/create-team-4-cf.yml
@@ -32,4 +32,4 @@ jobs:
       - name: upload & create cloudformation team_4_cafe_intel.yml file
         run: |
           aws s3 cp aws_template/team-4-cafe-intel.yml s3://team4-bucket-cf-template/team-4-cafe-intel.yml
-          aws cloudformation create-stack --stack-name team-4-cafe-intel --template-url https://team4-bucket-cf-template.s3.eu-west-1.amazonaws.com/team-4-cafe-intel.yml --region eu-west-1 --capabilities CAPABILITY_IAM
+          aws cloudformation create-stack --stack-name team4-cf-testing --template-url https://team4-bucket-cf-template.s3.eu-west-1.amazonaws.com/team4-cf-template.yaml --region eu-west-1 --capabilities CAPABILITY_IAM
