--- a/aws_template/team-4-cafe-intel.yml
+++ b/aws_template/team-4-cafe-intel.yml
@@ -12,12 +12,12 @@ Resources:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: team-4-data-production
-      # NotificationConfiguration:
-      #   LambdaConfigurations:
-      #     - Event: s3:ObjectCreated:*
-      #       Function: !GetAtt LambdaFunction.Arn
-  
-  # S3Bucket2:
+      NotificationConfiguration:
+        LambdaConfigurations:
+          - Event: s3:ObjectCreated:*
+            Function: !GetAtt LambdaFunction.Arn
+    
+  # S3Bucket2:  
   #   Type: AWS::S3::Bucket
   #   Properties:
   #     BucketName: team-4-transformed-data-production
@@ -57,27 +57,27 @@ Resources:
             - sts:AssumeRole
       Path: "/"
       PermissionsBoundary: !Sub arn:aws:iam::${AWS::AccountId}:policy/ScopePermissions
-      # Policies:
-      # - PolicyName: LambdaLogsPolicy
-      #   PolicyDocument:
-      #     Version: '2012-10-17'
-      #     Statement:
-      #     - Effect: Allow
-      #       Action:
-      #         - logs:CreateLogGroup
-      #         - logs:CreateLogStream
-      #         - logs:PutLogEvents
-      #       Resource: '*'
-      # - PolicyName: LambdaS3Policy
-      #   PolicyDocument:
-      #     Version: '2012-10-17'
-      #     Statement:
-      #     - Effect: Allow
-      #       Action:
-      #         - 's3:*'
-      #       Resource:
-      #         - "arn:aws:s3:::team4-bucket-cf-template/*"
-      #         - "arn:aws:s3:::team4-bucket-cf-template"
+      Policies:
+      - PolicyName: LambdaLogsPolicy
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+              - logs:CreateLogGroup
+              - logs:CreateLogStream
+              - logs:PutLogEvents
+            Resource: '*'
+      - PolicyName: LambdaS3Policy
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+              - 's3:*'
+            Resource:
+              - "arn:aws:s3:::team4-bucket-cf-template/*"
+              - "arn:aws:s3:::team4-bucket-cf-template"
 
   LambdaFunction:
     Type: AWS::Lambda::Function
@@ -103,7 +103,10 @@ Resources:
   #     Handler: lambda_main.handler
   #     Role: !GetAtt LambdaFunctionRole.Arn
   #     Code:
-  #       S3Bucket: team4-bucket-cf-template
-  #       S3Key: team-4-load-to-db-production.zip
+  #       ZipFile: |
+  #         def handler(event, context):
+            # print("Hi")
+        # S3Bucket: team4-bucket-cf-template
+        # S3Key: team-4-load-to-db-production.zip
 
 
