--- a/.github/workflows/update-team-4-cf.yml
+++ b/.github/workflows/update-team-4-cf.yml
@@ -16,18 +16,18 @@ jobs:
         id: checkout-repo
         uses: actions/checkout@v2
 
-      # - name: create team-4-extract-transform-production.zip
-      #   run: |
-      #     docker run -v "$PWD":/var/task "lambci/lambda:build-python3.8" /bin/sh -c "pip install -r requirements.txt -t package/; exit"
-      #     cd package
-      #     zip -r ../team-4-extract-transform-production.zip .   
-      #     cd ..
-      #     zip -g team-4-extract-transform-production.zip lambda_main_extract_transform.py
-      #     zip -g team-4-extract-transform-production.zip lambda_normalisation.py
+      - name: create team-4-extract-transform-production.zip
+        run: |
+          docker run -v "$PWD":/var/task "lambci/lambda:build-python3.8" /bin/sh -c "pip install -r requirements.txt -t package/; exit"
+          cd package
+          zip -r ../team-4-extract-transform-production.zip .   
+          cd ..
+          zip -g team-4-extract-transform-production.zip lambda_main_extract_transform.py
+          zip -g team-4-extract-transform-production.zip lambda_normalisation.py
       
-      # - name: upload team-4-extract-transform-production.zip to s3
-      #   run: |
-      #     aws s3 cp team-4-extract-transform-production.zip s3://team4-bucket-cf-template/team-4-extract-transform-production.zip
+      - name: upload team-4-extract-transform-production.zip to s3
+        run: |
+          aws s3 cp team-4-extract-transform-production.zip s3://team4-bucket-cf-template/team-4-extract-transform-production.zip
 
       - name: upload & create cloudformation team_4_cafe_intel.yml file
         run: |
