--- a/aws_template/team-4-cafe-intel.yml
+++ b/aws_template/team-4-cafe-intel.yml
@@ -85,14 +85,14 @@ Resources:
       FunctionName: team-4-extract-transform-production
       Description: Function to load raw csv data, transform them and export to another s3 bucket
       Runtime: python3.8
-      Handler: lambda_main.handler
+      Handler: lambda_main_extract_transform.handler
       Role: !GetAtt LambdaFunctionRole.Arn
       Code:
-        ZipFile: |
-          def handler(event, context):
-            print("Hi")
-        # S3Bucket: team4-bucket-cf-template
-        # S3Key: team-4-extract-transform-production.zip
+        # ZipFile: |
+        #   def handler(event, context):
+        #     print("Hi")
+        S3Bucket: team4-bucket-cf-template
+        S3Key: team-4-extract-transform-production.zip
   
   LambdaFunction2:
     Type: AWS::Lambda::Function
