--- a/.github/workflows/update-team-4-cf.yml
+++ b/.github/workflows/update-team-4-cf.yml
@@ -20,16 +20,24 @@ jobs:
         run: |
           docker run -v "$PWD":/var/task "lambci/lambda:build-python3.8" /bin/sh -c "pip install -r requirements.txt -t package/; exit"
           cd package
-          zip -r ../team-4-extract-transform-production.zip .   
+          zip -r ../team-4-extract-transform-production.zip . 
+          cip -r ../team-4-load-to-db-production.zip .  
           cd ..
           zip -g team-4-extract-transform-production.zip lambda_main_extract_transform.py
           zip -g team-4-extract-transform-production.zip lambda_normalisation.py
+          zip -g team-4-load-to-db-production.zip lambda_main_load_to_db.py
+          zip -g team-4-load-to-db-production.zip lambda_database_func.py
       
       - name: upload team-4-extract-transform-production.zip to s3
         run: |
           aws s3 cp team-4-extract-transform-production.zip s3://team4-bucket-cf-template/team-4-extract-transform-production.zip
 
+      - name: upload team-4-load-to-db-production.zip to s3
+        run: |
+          aws s3 cp team-4-load-to-db-production.zip s3://team4-bucket-cf-template/team-4-load-to-db-production.zip
+          
       - name: upload & create cloudformation team_4_cafe_intel.yml file
         run: |
           aws s3 cp aws_template/team-4-cafe-intel.yml s3://team4-bucket-cf-template/team-4-cafe-intel.yml
           aws cloudformation update-stack --stack-name team-4-cafe-intel --template-url https://team4-bucket-cf-template.s3.eu-west-1.amazonaws.com/team-4-cafe-intel.yml --region eu-west-1 --capabilities CAPABILITY_IAM
+
