--- a/aws_template/team-4-cafe-intel.yml
+++ b/aws_template/team-4-cafe-intel.yml
@@ -108,10 +108,16 @@ Resources:
       FunctionName: team-4-load-to-db-production
       Description: Recieve message from SQS queue then load csv to redshift database
       Runtime: python3.8
-      Handler: lambda_main.handler
+      Handler: lambda_main_load_to_db.handler
       Role: !GetAtt LambdaFunctionRole.Arn
       Code:
         S3Bucket: team4-bucket-cf-template
         S3Key: team-4-load-to-db-production.zip
 
-
+  LambdaFunctionEventSourceMapping:
+    Type: AWS::Lambda::EventSourceMapping
+    Properties:
+      BatchSize: 1
+      Enabled: true
+      EventSourceArn: !GetAtt SQSQueue.Arn
+      FunctionName: !GetAtt LambdaFunction2.Arn
