--- a/aws_template/team-4-cafe-intel.yml
+++ b/aws_template/team-4-cafe-intel.yml
@@ -108,10 +108,10 @@ Resources:
         S3Bucket: team4-bucket-cf-template
         S3Key: team-4-load-to-db-production.zip
 
-  # LambdaFunctionEventSourceMapping:
-  #   Type: AWS::Lambda::EventSourceMapping
-  #   Properties:
-  #     BatchSize: 1
-  #     Enabled: true
-  #     EventSourceArn: !GetAtt SQSQueue.Arn
-  #     FunctionName: !GetAtt LambdaFunction2.Arn
+  LambdaFunctionEventSourceMapping:
+    Type: AWS::Lambda::EventSourceMapping
+    Properties:
+      BatchSize: 1
+      Enabled: true
+      EventSourceArn: !GetAtt SQSQueue.Arn
+      FunctionName: !GetAtt LambdaFunction2.Arn
