--- a/aws_template/team-4-cafe-intel.yml
+++ b/aws_template/team-4-cafe-intel.yml
@@ -24,7 +24,7 @@ Resources:
       NotificationConfiguration:
         QueueConfigurations:
           - Event: 's3:ObjectCreated:*'
-            Queue: !GetAtt SQSQueue.Arn
+            Queue: arn:aws:sqs:eu-west-1:696036660875:team-4-sqs-queue-production
 
   S3BucketPermission:
     Type: AWS::Lambda::Permission
