--- a/aws_template/team-4-cafe-intel.yml
+++ b/aws_template/team-4-cafe-intel.yml
@@ -26,10 +26,10 @@ Resources:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: team-4-transformed-data-production
-      NotificationConfiguration:
-        QueueConfigurations:
-          - Event: 's3:ObjectCreated:*'
-            Queue: arn:aws:sqs:eu-west-1:696036660875:team-4-sqs-queue-production
+      # NotificationConfiguration:
+      #   QueueConfigurations:
+      #     - Event: 's3:ObjectCreated:*'
+      #       Queue: arn:aws:sqs:eu-west-1:696036660875:team-4-sqs-queue-production
 
   S3BucketPermission:
     Type: AWS::Lambda::Permission
@@ -107,7 +107,7 @@ Resources:
       Handler: lambda_main_load_to_db.handler
       Role: !GetAtt LambdaFunctionRole.Arn
       MemorySize: 256
-      Timeout: 120
+      Timeout: 300
       Code:
         S3Bucket: team4-bucket-cf-template
         S3Key: team-4-load-to-db-production.zip
