--- a/aws_template/team-4-cafe-intel.yml
+++ b/aws_template/team-4-cafe-intel.yml
@@ -50,6 +50,8 @@ Resources:
               - "SQS:RecieveMessage"
             Effect: "Allow"
             Resource: !GetAtt SQSQueue.Arn
+            ArnLike:
+              - aws:SourceArn: !GetAtt S3Bucket2.Arn
       Queues: 
         - !Ref SQSQueue
 
