--- a/aws_template/team-4-cafe-intel.yml
+++ b/aws_template/team-4-cafe-intel.yml
@@ -24,6 +24,7 @@ Resources:
 
   S3Bucket2:  
     Type: AWS::S3::Bucket
+    DependsOn: SQSQueue
     Properties:
       BucketName: team-4-transformed-data-production
       NotificationConfiguration:
@@ -50,8 +51,6 @@ Resources:
               - "SQS:RecieveMessage"
             Effect: "Allow"
             Resource: !GetAtt SQSQueue.Arn
-            ArnLike:
-              - aws:SourceArn: !GetAtt S3Bucket2.Arn
       Queues: 
         - !Ref SQSQueue
 
