--- a/aws_template/team-4-cafe-intel.yml
+++ b/aws_template/team-4-cafe-intel.yml
@@ -55,7 +55,7 @@ Resources:
             Resource: "*"
             Condition:
               ArnLike:
-                aws:SourceArn: "arn:aws:s3:::team-4-transformed-data-production
+                aws:SourceArn: arn:aws:s3:::team-4-transformed-data-production
       Queues: 
         - !Ref SQSQueue
 
