--- a/aws_template/team-4-cafe-intel.yml
+++ b/aws_template/team-4-cafe-intel.yml
@@ -49,9 +49,7 @@ Resources:
           - Effect: "Allow"
             Principal:
               AWS: "*"
-            Action:
-              - "SQS:SendMessage"
-              - "SQS:RecieveMessage"
+            Action: "SQS:SendMessage"
             Resource: "*"
             Condition:
               ArnLike:
