--- a/.github/workflows/update-team-4-cf.yml
+++ b/.github/workflows/update-team-4-cf.yml
@@ -35,10 +35,10 @@ jobs:
 
       - name: upload team-4-load-to-db-production.zip to s3
         run: |
-        
           KEY2=team-4-db_$(date +"%s").zip
           aws s3 cp team-4-load-to-db-production.zip s3://team4-bucket-cf-template/$KEY2
 
       - name: upload & create cloudformation team_4_cafe_intel.yml file
         run: |
           aws s3 cp aws_template/team-4-cafe-intel.yml s3://team4-bucket-cf-template/team-4-cafe-intel.yml
+          aws cloudformation update-stack --stack-name team-4-cafe-intel --template-url https://team4-bucket-cf-template.s3.eu-west-1.amazonaws.com/templates/team-4-cafe-intel.yml --region eu-west-1 --parameters LambdaFunctionKey=$KEY1 LambdaFunction2Key=$KEY2 --capabilities CAPABILITY_IAM
