--- a/.github/workflows/update-team-4-cf.yml
+++ b/.github/workflows/update-team-4-cf.yml
@@ -4,7 +4,7 @@ on:
   push
 
 jobs:
-  create-team-4-cf-stack:
+  update-team-4-stack:
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -41,4 +41,4 @@ jobs:
       - name: upload & create cloudformation team_4_cafe_intel.yml file
         run: |
           aws s3 cp aws_template/team-4-cafe-intel.yml s3://team4-bucket-cf-template/team-4-cafe-intel.yml
-          aws cloudformation update-stack --stack-name team-4-cafe-intel --template-url https://team4-bucket-cf-template.s3.eu-west-1.amazonaws.com/templates/team-4-cafe-intel.yml --region eu-west-1 --parameters LambdaFunctionKey=$KEY1 LambdaFunction2Key=$KEY2 --capabilities CAPABILITY_IAM
+          aws cloudformation update-stack --stack-name team-4-cafe-intel --template-url https://team4-bucket-cf-template.s3.eu-west-1.amazonaws.com/templates/team-4-cafe-intel.yml --region eu-west-1 --parameters ParameterKey=LambdaFunctionKey,ParameterValue=$KEY1 ParameterKey=LambdaFunction2Key,ParameterValue=$KEY2 --capabilities CAPABILITY_IAM
