--- a/.github/workflows/update-team-4-cf.yml
+++ b/.github/workflows/update-team-4-cf.yml
@@ -41,4 +41,4 @@ jobs:
       - name: upload & create cloudformation team_4_cafe_intel.yml file
         run: |
           aws s3 cp aws_template/team-4-cafe-intel.yml s3://team4-bucket-cf-template/team-4-cafe-intel.yml
-          aws cloudformation update-stack --stack-name team-4-cafe-intel --template-url https://team4-bucket-cf-template.s3.eu-west-1.amazonaws.com/templates/team-4-cafe-intel.yml --region eu-west-1 --parameters ParameterKey=LambdaFunctionKey,ParameterValue=$KEY1 ParameterKey=LambdaFunction2Key,ParameterValue=$KEY2 --capabilities CAPABILITY_IAM
+          aws cloudformation update-stack --stack-name team-4-cafe-intel --template-url https://team4-bucket-cf-template.s3.eu-west-1.amazonaws.com/team-4-cafe-intel.yml --region eu-west-1 --parameters ParameterKey=LambdaFunctionKey,ParameterValue=$KEY1 ParameterKey=LambdaFunction2Key,ParameterValue=$KEY2 --capabilities CAPABILITY_IAM
