--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,9 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-  
-      
 
       - name: execute tests 
         run: |
-          pytest test/
+          pytest test/test_database_func.py test/test_normalisation_func.py
