--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
+          
+      - name: install pytest 
+        run: |
+          pip install pytest 
+        
+        
       - name: execute tests 
         run: |
           pytest test/test_database_func.py test/test_normalisation_func.py
